--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,8 @@
-# PERSONAL_aCCESS_TOKEN = "";
+DB_USER=postgres 
+DB_HOST=localhost 
+DB_PASSWORD=ababab
+DB_PORT=5432 
+DB_DATABASE=choolifah
+ 
+JWT_SECRET=jasdfajfbvklhbdhlkfcbriuanj3r9fh0ncakjdjbsioudb12kflnds 
+REFRESH_TOKEN=ASFKAJBAAjajfbvklhbdhlakjf1019rujdikcnskmnaLIJD20SKASNA
