--- a/backend/package.json
+++ b/backend/package.json
@@ -12,9 +12,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "cors": "^2.8.5",
     "express": "^4.20.0",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "react-icons": "^5.3.0",
+    "sequelize": "^6.37.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
