--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,27 @@
-DB_USER=postgres 
-DB_HOST=localhost 
-DB_PASSWORD=
-DB_PORT=5432 
-DB_DATABASE=choolifah
+# DB_USER=postgres 
+# DB_HOST=localhost 
+# DB_PASSWORD=
+# DB_PORT=5432 
+# DB_DATABASE=choolifah
  
-JWT_SECRET=jasdfajfbvklhbdhlkfcbriuanj3r9fh0ncakjdjbsioudb12kflnds 
-REFRESH_TOKEN=ASFKAJBAAjajfbvklhbdhlakjf1019rujdikcnskmnaLIJD20SKASNA
+# JWT_SECRET=jasdfajfbvklhbdhlkfcbriuanj3r9fh0ncakjdjbsioudb12kflnds 
+# REFRESH_TOKEN=ASFKAJBAAjajfbvklhbdhlakjf1019rujdikcnskmnaLIJD20SKASNA
+
+
+NODE_ENV=development
+SECRET=secret
+PORT=3000
+TIMEZONE=+07:00
+TZ=Asia/Jakarta
+SESSION_EXPIRE=1800
+VERSION=1.0
+
+USE_DB=postgres
+
+DB_HOST=localhost
+DB_USER=postgres
+DB_PASSWORD=ababab
+DB_NAME=choolifah
+DB_PORT=5432
+DB_DRIVER=postgres
+DB_LOGGING=true
