--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,17 +1,20 @@
-NODE_ENV=
-SECRET=
-PORT=
-TIMEZONE=
-TZ=
-SESSION_EXPIRE=
-VERSION=
+NODE_ENV=development
+SECRET=secret
+PORT=3000
+TIMEZONE=+07:00
+TZ=Asia/Jakarta
+SESSION_EXPIRE=1800
+VERSION=1.0
 
-USE_DB=
+USE_DB=postgres
 
-DB_HOST=
-DB_USER=
-DB_PASSWORD=
-DB_NAME=
-DB_PORT=
-DB_DRIVER=
-DB_LOGGING=
+DB_HOST=localhost
+DB_USER=postgres
+DB_PASSWORD=kivandra7
+DB_NAME=azura_db
+DB_PORT=5432
+DB_DRIVER=postgres
+DB_LOGGING=true
+
+JWT_SECRET=jasdfajfbvklhbdhlkfcbriuanj3r9fh0ncakjdjbsioudb12kflnds
+REFRESH_TOKEN=ASFKAJBAAjajfbvklhbdhlakjf1019rujdikcnskmnaLIJD20SKASNA
