--- a/backend/package.json
+++ b/backend/package.json
@@ -19,17 +19,22 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "compression": "^1.7.4",
-    "connect-pg-simple": "^10.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "bcrypt": "^5.1.1",
+    "compression": "^1.7.4",
+    "connect-pg-simple": "^10.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.20.0",
+    "express-session": "^1.18.0",
+    "jsonwebtoken": "^9.0.2",
+    "lusca": "^1.7.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.12.0",
     "react-icons": "^5.3.0",
     "sequelize": "^6.37.3"
