--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "migrate": "sequelize-cli db:migrate",
     "migrate:reset": "sequelize-cli db:migrate:undo:all",
     "seed": "sequelize-cli db:seed:all",
+    "makeseed": "sequelize-cli seed:generate --name",
     "db:setup": "sequelize-cli db:migrate && sequelize-cli db:seed:all",
     "db:seed": "sequelize-cli db:seed:all",
     "db:seed:reset": "sequelize-cli db:seed:undo:all",
