fixing some bug

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,8 +10,8 @@ USE_DB=postgres
 
 DB_HOST=localhost
 DB_USER=postgres
-DB_PASSWORD=kivandra7
-DB_NAME=azura_db
+DB_PASSWORD=
+DB_NAME=
 DB_PORT=5432
 DB_DRIVER=postgres
 DB_LOGGING=true
